<resources>
    <string name="app_name">My News</string>

    <!-- Search articles text -->


    <!-- Notifications text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


</resources>
