<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controler.activity.PageNotification">


    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_search_term2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="Search query term">

        </EditText>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="393dp"
        android:layout_height="146dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <CheckBox
            android:id="@+id/checkBox_arts2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Arts" />

        <CheckBox
            android:id="@+id/checkBox_entrepreneurs2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:text="Entrepreneurs" />

        <CheckBox
            android:id="@+id/checkBox_business2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:text="Business" />

        <CheckBox
            android:id="@+id/checkBox_politics2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="10dp"
            android:text="Politics" />

        <CheckBox
            android:id="@+id/checkBox_sports2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="55dp"
            android:text="Sports" />

        <CheckBox
            android:id="@+id/checkBox_travel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="100dp"
            android:text="Travel" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/background_dark" />


    <Switch
        android:id="@+id/switchCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:checked="false"
        android:text="Enable notifications (once per day)"
        android:textSize="16sp" />

</LinearLayout>