<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="always" />

        <item
            app:showAsAction="never"
            android:title="Notifications"
            android:id="@+id/notification">
        </item>

        <item
            app:showAsAction="never"
            android:title="Help"
            android:id="@+id/help">
        </item>

        <item
            app:showAsAction="never"
            android:title="About"
            android:id="@+id/About">
        </item>

</menu>